Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-434

AXIOM_SOAP_HEADER_BLOCK_SET_ATTRIBUTE and AXIOM_SOAP_HEADER_BLOCK_SET_ATTRIBUTE fails

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.95
    • 0.96
    • xml/soap
    • None

    Description

      These two methods fail. The reason is they are not assigned to op struct in create function of the struct.

      Attachments

        Activity

          People

            samisa Don Samisa Abeysinghe
            damitha Damitha N.M. Kumarage
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: